@@ -23,6 +23,7 @@
     document Unmount On Exit ignored on X logout kill #204
     address debian packaging warnings #209
     fix segfault on middle-click bookmarks empty #208
+    Dialog label --wrap|--nowrap, all --compact --expand
 0.8.2   2012-10-25:
     fix --enable-hal build issues (affected 0.7.6 thru 0.8.1)
     overwrite dialog replace text view with labels
